    the MIME type. This should be used in preference to the current mechanism
    used by many clients, <tt>type.extensions.first</tt>. This will allow the
    implementation to change over time.
  * Added MIME::Type#friendly based on the concept presented by Łukasz Śliwa’s
    {friendly_mime}[https://github.com/lukaszsliwa/friendly_mime] gem. The
    initial data for this is pulled from +friendly_mime+.
* MIME Type Development Tools:
  * Adding documentation to conversion methods.
  * Adding some robustness to missing Nokogiri support.

== 2.3 / 2014-05-23

* Bugs:
  * Fixed a bug in <tt>MIME::Types#type_for</tt> where type specifications that
    did not match a MIME::Type would be returned as +nil+ inside the returned
    array. This was incorrect behaviour as those values should not have been
    returned, resulting in an empty array.
* MIME Type Development Tools:
  * As always, there are bugs in the IANA registry because it's manually
    maintained. Some robustness has been added to properly writing file
    template references where the file template reference is not a full media
    type specification (e.g., 'amr-wb\+' instead of 'audio/amr-wb\+').
  * Both the IANA and Apache import tools were unnecessarily case-sensitive in
    matching against already-existing MIME types, resulting in extra work to
    weed out duplicates that differed only in the case of the canonical content
    type. This has been fixed.

== 2.2 / 2014-03-14

* Clarified contribution guidelines for MIME types. Resolves
  {#57}[https://github.com/halostatue/mime-types/issues/57].
* Fixed a small bug where deprecated methods would warn of deprecation when
  called by internal methods. Resolves
  {#60}[https://github.com/halostatue/mime-types/issues/60].
* Dropped Code Climate; added Coveralls for test coverage reports.
* Removing external references to RubyForge, as it is shutting down. Resolves
  {#59}[https://github.com/halostatue/mime-types/issues/59].

== 2.1 / 2014-01-25
